--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "jsoup-1.16.1.jar"
+        "jsoup-1.16.1.jar",
+        "c:\\Users\\lehan\\Downloads\\json-simple-1.1.1.jar"
     ]
 }
